# fmtlog

./: .gitignore  CMakeLists.txt  README.md  build.sh  fmtlog-inl.h  fmtlog.h  get-fmt.bat  get-fmt.sh
.github/workflows/: fmtlog-verify-build.yaml
test/: CMakeLists.txt  enc_dec_test.cc  log_test.cc
